--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="border_color">#A7ADBC</color>
+    <color name="transparent">#00000000</color>
+    <color name="orange">#f06457</color>
+    <color name="orange2">#f08457</color>
 
 </resources>
